# Forumatrix

./: LICENSE  README.md  docker-compose.yml  makefile
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_users.sql  0002_posts.sql  0003_comments.sql  0004_post_likes.sql  0005_tags.sql  0006_sessions.sql  0007_reports.sql  0008_avatar_columns.sql  0009_comment_likes.sql  0010_notificatitons.sql  0011_chats.sql  0012_chat_messages.sql  0015_doc.sql  0016_doc_pages.sql  0017_doc_collaborators.sql  0018_doc_page_snapshots.sql  0019_doc_join_request.sql
backend/scripts/: seed_demo.sh  seed_inbox.sh
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/auth/: mod.rs
backend/src/api/auth/auth_handler/: cookie_helper.rs  login.rs  logout.rs  logout_all.rs  mod.rs  password.rs  register.rs  session.rs  types.rs  utils.rs
backend/src/api/auth/auth_query/: mod.rs  sessions.rs  types.rs  users.rs
backend/src/api/auth/auth_validate/: login.rs  register.rs
backend/src/api/avatars/: mod.rs
backend/src/api/avatars/avatars_handler/: generate.rs  mod.rs  types.rs  update.rs  upload.rs
backend/src/api/avatars/avatars_query/: update.rs
backend/src/api/avatars/avatars_validate/: upload.rs
backend/src/api/chats/: mod.rs
backend/src/api/comments/: mod.rs
backend/src/api/docs/: mod.rs
backend/src/api/error_types/: codes.rs  core.rs  db.rs  http.rs  mod.rs  validation.rs
backend/src/api/notifications/: mod.rs
backend/src/api/posts/: mod.rs
backend/src/api/users/: mod.rs
backend/src/infra/: db.rs  mod.rs  seed.rs
frontend/: Dockerfile  (+5 more)
(+160 files in other folders)
