[package]
name = "arena-ai-backend"

version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.7", features = ["macros", "multipart"]}
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

# Config / utils
dotenvy = "0.15"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
tempfile = "3"
serial_test = "3.2.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing
bcrypt = "0.17.1"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Avatar processing
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
clap = { version = "4", features = ["derive"] }